evaluating round when last player standing